# mfform

./: .gitignore  Cargo.toml  README.md  screen.mfform
mfform-lib/: Cargo.toml
mfform-lib/src/: app.rs  dialog_appender.rs  form.rs  input.rs  label.rs  lib.rs  pos.rs  select_form.rs  tests.rs  widget.rs
src/: app.rs  dialog_appender.rs  form.rs  input.rs  label.rs  lib.rs  main.rs  parser.rs  pos.rs  select_form.rs  tests.rs  vec_appender.rs  widget.rs
