[workspace]
members = ["mfform-lib"]

[package]
name = "mfform"
version = "0.3.0"
edition = "2021"

description = "A simple input form simulating mainframe input forms, think 3270."
license = "MIT"
documentation = "https://docs.rs/mfform"
homepage = "https://github.com/thorhs/mfform"
repository = "https://github.com/thorhs/mfform"

[[bin]]
name = "mfform"
path = "src/main.rs"

[dependencies]
mfform-lib = "0.3.0"
log = "0.4"
nom = "7"
snailquote = "0.3"
