[package]
name = "mfform-lib"
version = "0.4.0"
edition = "2021"

description = "A simple library for input form simulating mainframe input forms, think 3270."
license = "MIT"
documentation = "https://docs.rs/mfform"
homepage = "https://github.com/thorhs/mfform"
repository = "https://github.com/thorhs/mfform"

[dependencies]
anyhow = "1"
crossterm = "0.27"
log = "0.4"
log4rs = "1"
log4rs_test_utils = "0.2"
#nom = "7"
#snailquote = "0.3"
